--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-responsive": "^10.0.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1",
     "typeit-react": "^2.7.1"
