--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "next": "14.2.5",
+    "react-icons": "^5.0.1",
+    "framer-motion": "^10.18.0",
+    "react-responsive": "^10.0.0",
+    "react-toastify": "^10.0.5",
+   "swiper": "^11.0.5",
+    "tailwind-merge": "^2.2.1",
+    "typeit-react": "^2.7.1"
   },
   "devDependencies": {
     "typescript": "^5",
